Aggiornamento del sito n1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<!-- EFFETTO NEVE -->
+
 <div class="snow"></div>
 
 
@@ -28,7 +28,6 @@
 
 <main>
 
-  <!-- HERO -->
   <section id="home" class="hero">
     <div class="container hero-box">
       <h2>Scegli il tuo regalo per me!</h2>
@@ -37,14 +36,13 @@
     </div>
   </section>
 
-  <!-- CAROUSEL -->
   <section id="gallery" class="container carousel">
     <h3>Galleria</h3>
 
     <div class="carousel-wrapper">
 
       <div class="slide active">
-        <img src="images/il_PC.jpg" alt="PC White Shark">
+        <img src="images/il_PC.jpg" alt="Er PC">
         <a href="https://www.golookshop.it/shop/pc-white-shark/" class="caption" target="_blank">
           🎁 PC White Shark 2.0
         </a>
@@ -52,32 +50,32 @@
 
       <div class="slide">
         <img src="images/placeholder.svg" alt="Regalo 2">
-        <a href="https://example.com/2" class="caption" target="_blank">
+        <a href="https://example.com/2" class="caption" target="_blank" rel="noopener, noreferrer">
           🎁 Regalo numero 2
         </a>
       </div>
 
       <div class="slide">
         <img src="images/placeholder.svg" alt="Regalo 3">
-        <a href="https://example.com/3" class="caption" target="_blank">
+        <a href="https://example.com/3" class="caption" target="_blank" rel="noopener, noreferrer">
           🎁 Regalo 3
         </a>
       </div>
 
       <div class="slide">
         <img src="images/placeholder.svg" alt="Regalo 4">
-        <a href="https://example.com/4" class="caption" target="_blank">
+        <a href="https://example.com/4" class="caption" target="_blank" rel="noopener, noreferrer">
           🎁 Regalo 4
         </a>
       </div>
 
-      <!-- FRECCE -->
+
       <button class="arrow left">❮</button>
       <button class="arrow right">❯</button>
 
-    </div>
+      </div>
 
-    <!-- PALLINI -->
+
     <div class="dots">
       <span class="dot active" data-index="0"></span>
       <span class="dot" data-index="1"></span>
@@ -87,7 +85,7 @@
 
   </section>
 
-  <!-- CONTATTI -->
+
   <section id="contact" class="container contact">
     <h3>Contatti</h3>
     <p>Per modifiche, puoi aggiornare <code>me </code> o <code>me </code>.</p>
@@ -101,7 +99,7 @@
   </div>
 </footer>
 
-<!-- JAVASCRIPT -->
+
 <script src="script.js"></script>
 
 </body>
