Aggiungo le pagine per regali, fix dei bug e ottimizazione generale

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Merry Christmas</title>
+  <title>La prova</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="images/Favicon.png">
 </head>
@@ -31,7 +31,7 @@
   <section id="home" class="hero">
     <div class="container hero-box">
       <h2>Scegli il tuo regalo per me!</h2>
-      <p>Spoiler: i regali che vedi per primi sono quelli che desidero di più!</p>
+      <p>Spoiler: i regali che vedi per primi sono quelli che desidero di più^^</p>
       <a href="#gallery" class="cta">Vedi il carosello</a>
     </div>
   </section>
@@ -43,29 +43,33 @@
 
       <div class="slide active">
         <img src="images/il_PC.jpg" alt="Er PC">
-        <a href="https://www.golookshop.it/shop/pc-white-shark/" class="caption" target="_blank">
-          🎁 PC White Shark 2.0
+		<span class="priority glass">🎁 Regalo #1</span>
+        <a href="regalo1.html" class="caption">
+          🎁 PC White Shark 2.0 🎁
         </a>
       </div>
 
       <div class="slide">
-        <img src="images/placeholder.svg" alt="Regalo 2">
-        <a href="https://example.com/2" class="caption" target="_blank" rel="noopener, noreferrer">
-          🎁 Regalo numero 2
+        <img src="images/Regalo.png" alt="Regalo 2">
+		<span class="priority glass">🎁 Regalo #2</span>
+        <a href="Regalo2.html" class="caption">
+          🎁 Regalo numero 2 🎁
         </a>
       </div>
 
       <div class="slide">
-        <img src="images/placeholder.svg" alt="Regalo 3">
-        <a href="https://example.com/3" class="caption" target="_blank" rel="noopener, noreferrer">
-          🎁 Regalo 3
+        <img src="images/Regalo.png" alt="Regalo 3">
+		<span class="priority glass">🎁 Regalo #3</span>
+        <a href="Regalo3.html" class="caption">
+          🎁 Regalo 3 🎁
         </a>
       </div>
 
       <div class="slide">
-        <img src="images/placeholder.svg" alt="Regalo 4">
-        <a href="https://example.com/4" class="caption" target="_blank" rel="noopener, noreferrer">
-          🎁 Regalo 4
+        <img src="images/Regalo.png" alt="Regalo 4">
+		<span class="priority glass">🎁 Regalo #4</span>
+        <a href="Regalo4.html" class="caption">
+          🎁 Regalo 4 🎁
         </a>
       </div>
 
@@ -95,7 +99,7 @@
 
 <footer class="site-footer">
   <div class="container">
-    <small>CopyRights 2025 © Someone unknow to the world and the self</small>
+    <small>CopyRights 2025 ©Someone unknow to the world and the self</small>
   </div>
 </footer>
 
