Riscrivo il nome file scritto male

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="slide active">
         <img src="images/il_PC.jpg" alt="Er PC">
 		<span class="priority glass">🎁 Regalo #1</span>
-        <a href="regalo1.html" class="caption">
+        <a href="Regalo1.html" class="caption">
           🎁 PC White Shark 2.0 🎁
         </a>
       </div>
