Ottimizo il sito per telefoni/Tablet

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> Merry Christmas </title>
+  <title>La prova</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="images/Favicon.png">
 </head>
@@ -47,13 +47,8 @@
 
       <div class="slide active">
         <img src="images/il_PC.jpg" alt="Er PC">
-<<<<<<< HEAD
         <span class="priority glass" data-i18n="priority_1">🎁 Regalo #1</span>
         <a href="regalo1.html" class="caption" data-i18n="caption_1">
-=======
-		<span class="priority glass">🎁 Regalo #1</span>
-        <a href="Regalo1.html" class="caption">
->>>>>>> 3f8e34426094eabd950a001f27bc2b2357405983
           🎁 PC White Shark 2.0 🎁
         </a>
       </div>
@@ -107,7 +102,7 @@
 
 <footer class="site-footer">
   <div class="container">
-    <small data-i18n="footer_copy">CopyRights 2025 ©Someone unknow to the world and the self</small>
+    <small>CopyRights 2025 ©Someone unknow to the world and the self</small>
   </div>
 </footer>
 
