--- a/Regalo2.html
+++ b/Regalo2.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title data-i18n="gift2_page_title">Regalo #2</title>
+  <title>Gift #2</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="images/Regalo.png">
 </head>
 <body>
 
@@ -16,8 +17,8 @@
     <nav>
       <a href="index.html#home" data-i18n="nav_home">Home</a>
       <a href="index.html#gallery" data-i18n="nav_gallery">Galleria</a>
-      <a href="index.html#contact" data-i18n="nav_contact">Contatti</a>
-      <a href="index.html#instructions" data-i18n="nav_instructions">Istruzioni</a>
+      <a href="#contact" data-i18n="nav_contact">Contatti</a>
+      <a href="#instructions" data-i18n="nav_instructions">Istruzioni</a>
     </nav>
   </div>
 </header>
@@ -29,9 +30,11 @@
 </div>
 
 <main class="container" style="margin-top: 120px;">
-  <h2 data-i18n="gift_title_2">🎁 Regalo #2 – Cuffie Gaming HyperSound</h2>
+  <h2 class="animated-underline" data-i18n="gift_title_2">
+   🎁 Regalo #2 – Cuffie Gaming HyperSound
+  </h2>
 
-  <img src="images/Regalo.png" alt="Cuffie Gaming" style="max-width:100%; border-radius:12px; display:block; margin:16px auto;">
+  <img src="images/Regalo.png" alt="Cuffie Gaming" style="image">
 
   <p data-i18n="gift_desc_2">
     Ottime cuffie con microfono, audio surround e comode per sessioni lunghe di gioco.
