--- a/Regalo4.html
+++ b/Regalo4.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title data-i18n="gift4_page_title">Regalo #4</title>
+  <title>Gift #4</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="images/Regalo.png">
 </head>
 <body>
 
 <div class="snow"></div>
+
 
 <header class="site-header">
   <div class="container">
@@ -16,8 +18,8 @@
     <nav>
       <a href="index.html#home" data-i18n="nav_home">Home</a>
       <a href="index.html#gallery" data-i18n="nav_gallery">Galleria</a>
-      <a href="index.html#contact" data-i18n="nav_contact">Contatti</a>
-      <a href="index.html#instructions" data-i18n="nav_instructions">Istruzioni</a>
+      <a href="#contact" data-i18n="nav_contact">Contatti</a>
+      <a href="#instructions" data-i18n="nav_instructions">Istruzioni</a>
     </nav>
   </div>
 </header>
@@ -29,9 +31,11 @@
 </div>
 
 <main class="container" style="margin-top: 120px;">
-  <h2 data-i18n="gift_title_4">🎁 Regalo #4 – Tastiera Meccanica ClickPro</h2>
+  <h2 class="animated-underline" data-i18n="gift_title_4">
+   🎁 Regalo #4 – Tastiera Meccanica ClickPro
+  </h2>
 
-  <img src="images/Regalo.png" alt="Tastiera Meccanica" style="max-width:100%; border-radius:12px; display:block; margin:16px auto;">
+  <img src="images/Regalo.png" alt="Tastiera Meccanica" style="image">
 
   <p data-i18n="gift_desc_4">
     Tastiera meccanica RGB con switch tattile, retroilluminazione personalizzabile e costruzione solida per gaming e studio.
@@ -39,7 +43,7 @@
 
   <p><strong data-i18n="gift_price_4">Prezzo:</strong> <span data-i18n="gift_price_val_4">circa 90€</span></p>
 
-  <p><a href="#" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_4">Vai al sito</a></p>
+  <p><a href="https://amzn.eu/d/i09AXzX" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_4" style="link_esterno">Vai al sito</a></p>
 
   <br>
   <a href="index.html#gallery" class="cta" data-i18n="back_to_gallery">⬅ Torna alla galleria</a>
