Aggiungo il menu a tendina sui telefonini

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>La prova</title>
+  <title>Merry Christmas</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="images/Favicon.png">
 </head>
@@ -28,6 +28,15 @@
   <button class="glass" onclick="setLang('en')">ᴇɴɢ</button>
   <button class="glass" onclick="setLang('uk')">ᴜᴀ</button>
   <button class="glass" onclick="setLang('it')">ɪᴛᴀ</button>  
+</div>
+
+<!-- Per telefonini piccolini -->
+<div class="lang-select-mobile">
+  <select onchange="setLang(this.value)">
+    <option value="it">Italiano 🇮🇹</option>
+    <option value="en">English 🇬🇧</option>
+    <option value="uk">Українська 🇺🇦</option>
+  </select>
 </div>
 
 <main>
