Riscrivo un nome scritto male

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="slide active">
         <img src="images/il_PC.jpg" alt="Er PC">
         <span class="priority glass" data-i18n="priority_1">🎁 Regalo #1</span>
-        <a href="regalo1.html" class="caption" data-i18n="caption_1">
+        <a href="Regalo1.html" class="caption" data-i18n="caption_1">
           🎁 PC White Shark 2.0 🎁
         </a>
       </div>
