--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <!-- Per telefonini piccolini -->
 <div class="lang-select-mobile">
   <select onchange="setLang(this.value)">
+    <option disabled selected>•••</option>
     <option value="it">Italiano 🇮🇹</option>
     <option value="en">English 🇬🇧</option>
     <option value="uk">Українська 🇺🇦</option>
@@ -44,7 +45,7 @@
   <section id="home" class="hero">
     <div class="container hero-box">
       <h2 data-i18n="hero_title">Scegli il tuo regalo per me!</h2>
-      <p data-i18n="hero_desc">Spoiler: i regali che vedi per primi sono quelli che desidero di più^^</p>
+      <p data-i18n="hero_desc" >Spoiler: i regali che vedi per primi sono quelli che desidero di più^^</p>
       <a href="#gallery" class="cta" data-i18n="hero_button">Vedi il carosello</a>
     </div>
   </section>
