--- a/Regalo1.html
+++ b/Regalo1.html
@@ -18,7 +18,7 @@
       <a href="index.html#home" data-i18n="nav_home">Home</a>
       <a href="index.html#gallery" data-i18n="nav_gallery">Galleria</a>
       <a href="#contact" data-i18n="nav_contact">Contatti</a>
-      <a href="#instructions" data-i18n="nav_instructions">Istruzioni</a>
+      <a href="index.html#instructions" data-i18n="nav_instructions">Istruzioni</a>
     </nav>
   </div>
 </header>
@@ -29,12 +29,12 @@
   <button class="glass" onclick="setLang('it')">ɪᴛᴀ</button>
 </div>
 
-<main class="container" style="margin-top: 120px;">
+<main  class="container gift-container">
   <h2 class="animated-underline"  data-i18n="gift_title_1">
   🎁 Regalo #1 – PC White Shark 2.0
   </h2>
 
-  <img src="images/il_PC.jpg" alt="PC White Shark" style="image">
+  <img src="images/il_PC.jpg" alt="PC White Shark" class="gift-image">
 
   <p data-i18n="gift_desc_1">
     Questo è il regalo che desidero di più! Un PC super potente per giocare, studiare e programmare.
@@ -42,7 +42,9 @@
 
   <p><strong data-i18n="gift_price_1">Prezzo:</strong> <span data-i18n="gift_price_val_1">circa 1200€</span></p>
 
-  <p><a href="https://www.golookshop.it/shop/pc-white-shark/" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_1">Vai al sito</a></p>
+  <p><a class="link_esterno" href="https://www.golookshop.it/shop/pc-white-shark/" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_1">
+  Vai al sito
+  </a></p>
 
   <br>
   <a href="index.html#gallery" class="cta" data-i18n="back_to_gallery">⬅ Torna alla galleria</a>
