--- a/Regalo2.html
+++ b/Regalo2.html
@@ -18,7 +18,7 @@
       <a href="index.html#home" data-i18n="nav_home">Home</a>
       <a href="index.html#gallery" data-i18n="nav_gallery">Galleria</a>
       <a href="#contact" data-i18n="nav_contact">Contatti</a>
-      <a href="#instructions" data-i18n="nav_instructions">Istruzioni</a>
+      <a href="index.html#instructions" data-i18n="nav_instructions">Istruzioni</a>
     </nav>
   </div>
 </header>
@@ -29,12 +29,12 @@
   <button class="glass" onclick="setLang('it')">ɪᴛᴀ</button>
 </div>
 
-<main class="container" style="margin-top: 120px;">
+<main  class="container gift-container">
   <h2 class="animated-underline" data-i18n="gift_title_2">
    🎁 Regalo #2 – Cuffie Gaming HyperSound
   </h2>
 
-  <img src="images/Regalo.png" alt="Cuffie Gaming" style="image">
+  <img src="images/Regalo.png" alt="Cuffie Gaming" class="gift-image">
 
   <p data-i18n="gift_desc_2">
     Ottime cuffie con microfono, audio surround e comode per sessioni lunghe di gioco.
@@ -42,7 +42,9 @@
 
   <p><strong data-i18n="gift_price_2">Prezzo:</strong> <span data-i18n="gift_price_val_2">circa 80€</span></p>
 
-  <p><a href="#" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_2">Vai al sito</a></p>
+  <p><a class="link_esterno" href="#" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_2" class="">
+  Vai al sito
+  </a></p>
 
   <br>
   <a href="index.html#gallery" class="cta" data-i18n="back_to_gallery">⬅ Torna alla galleria</a>
