--- a/Regalo3.html
+++ b/Regalo3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Gift #4</title>
+  <title>Gift #3</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="images/Regalo.png">
 </head>
@@ -18,7 +18,7 @@
       <a href="index.html#home" data-i18n="nav_home">Home</a>
       <a href="index.html#gallery" data-i18n="nav_gallery">Galleria</a>
       <a href="#contact" data-i18n="nav_contact">Contatti</a>
-      <a href="#instructions" data-i18n="nav_instructions">Istruzioni</a>
+      <a href="index.html#instructions" data-i18n="nav_instructions">Istruzioni</a>
     </nav>
   </div>
 </header>
@@ -29,12 +29,12 @@
   <button class="glass" onclick="setLang('it')">ɪᴛᴀ</button>
 </div>
 
-<main class="container" style="margin-top: 120px;">
+<main  class="container gift-container">
   <h2 class="animated-underline"  data-i18n="gift_title_3">
    🎁 Regalo #3 – Zaino TechPack
   </h2>
 
-  <img src="images/Regalo.png" alt="Zaino TechPack" style="image">
+  <img src="images/Regalo.png" alt="Zaino TechPack" class="gift-image">
 
   <p data-i18n="gift_desc_3">
     Zaino resistente con scomparti speciali per laptop, caricatore e accessori, perfetto per la scuola e i viaggi.
@@ -42,7 +42,7 @@
 
   <p><strong data-i18n="gift_price_3">Prezzo:</strong> <span data-i18n="gift_price_val_3">circa 60€</span></p>
 
-  <p><a href="#" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_3">Vai al sito</a></p>
+  <p><a class="link_esterno" href="#" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_3">Vai al sito</a></p>
 
   <br>
   <a href="index.html#gallery" class="cta" data-i18n="back_to_gallery">⬅ Torna alla galleria</a>
