--- a/Regalo4.html
+++ b/Regalo4.html
@@ -11,7 +11,6 @@
 
 <div class="snow"></div>
 
-
 <header class="site-header">
   <div class="container">
     <h1 data-i18n="header_title">Mia lista per san Niccola</h1>
@@ -19,7 +18,7 @@
       <a href="index.html#home" data-i18n="nav_home">Home</a>
       <a href="index.html#gallery" data-i18n="nav_gallery">Galleria</a>
       <a href="#contact" data-i18n="nav_contact">Contatti</a>
-      <a href="#instructions" data-i18n="nav_instructions">Istruzioni</a>
+      <a href="index.html#instructions" data-i18n="nav_instructions">Istruzioni</a>
     </nav>
   </div>
 </header>
@@ -30,22 +29,30 @@
   <button class="glass" onclick="setLang('it')">ɪᴛᴀ</button>
 </div>
 
-<main class="container" style="margin-top: 120px;">
+<main class="container gift-container">
   <h2 class="animated-underline" data-i18n="gift_title_4">
-   🎁 Regalo #4 – Tastiera Meccanica ClickPro
+    🎁 Regalo #4 – Tastiera Meccanica ClickPro
   </h2>
 
-  <img src="images/Regalo.png" alt="Tastiera Meccanica" style="image">
+  <img src="images/Regalo.png" alt="Tastiera Meccanica" class="gift-image">
 
   <p data-i18n="gift_desc_4">
     Tastiera meccanica RGB con switch tattile, retroilluminazione personalizzabile e costruzione solida per gaming e studio.
   </p>
 
-  <p><strong data-i18n="gift_price_4">Prezzo:</strong> <span data-i18n="gift_price_val_4">circa 90€</span></p>
+  <p>
+    <strong data-i18n="gift_price_4">Prezzo:</strong>
+    <span data-i18n="gift_price_val_4">circa 90€</span>
+  </p>
 
-  <p><a href="https://amzn.eu/d/i09AXzX" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_4" style="link_esterno">Vai al sito</a></p>
+  <p>
+    <a class="link_esterno" href="https://amzn.eu/d/i09AXzX" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_4">
+      Vai al sito
+    </a>
+  </p>
 
   <br>
+
   <a href="index.html#gallery" class="cta" data-i18n="back_to_gallery">⬅ Torna alla galleria</a>
 </main>
 
@@ -57,5 +64,6 @@
 
 <script src="traduzioni.js"></script>
 <script src="script.js"></script>
+
 </body>
 </html>
