Modifiche generali e aggiunta l'immagine-link nell'index

--- a/Regalo1.html
+++ b/Regalo1.html
@@ -18,7 +18,7 @@
       <a href="index.html#home" data-i18n="nav_home">Home</a>
       <a href="index.html#gallery" data-i18n="nav_gallery">Galleria</a>
       <a href="#contact" data-i18n="nav_contact">Contatti</a>
-      <a href="index.html#instructions" data-i18n="nav_instructions">Istruzioni</a>
+      <a href="#instructions" data-i18n="nav_instructions">Istruzioni</a>
     </nav>
   </div>
 </header>
@@ -42,10 +42,21 @@
 
   <p><strong data-i18n="gift_price_1">Prezzo:</strong> <span data-i18n="gift_price_val_1">circa 1200€</span></p>
 
+  
+   <section id="instructions" class="contact">
+    <h3 data-i18n="instr_title_1"> Istruzioni </h3>
+    <p data-i18n="instr_text_1"> jdbdbskbxkdb</p>
+   </section>
+   
   <p><a class="link_esterno" href="https://www.golookshop.it/shop/pc-white-shark/" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_1">
   Vai al sito
   </a></p>
-
+   
+    <section id="contact" class="container contact">
+    <h3 data-i18n="contact_title">Contatti</h3>
+    <p data-i18n="contact_text">Per modifiche, puoi contattare  <code>me </code> o <code>me </code>.</p>
+  </section>
+  
   <br>
   <a href="index.html#gallery" class="cta" data-i18n="back_to_gallery">⬅ Torna alla galleria</a>
 </main>
