--- a/Regalo2.html
+++ b/Regalo2.html
@@ -18,7 +18,7 @@
       <a href="index.html#home" data-i18n="nav_home">Home</a>
       <a href="index.html#gallery" data-i18n="nav_gallery">Galleria</a>
       <a href="#contact" data-i18n="nav_contact">Contatti</a>
-      <a href="index.html#instructions" data-i18n="nav_instructions">Istruzioni</a>
+	  <a href="#instructions" data-i18n="nav_instructions">Istruzioni</a> 
     </nav>
   </div>
 </header>
@@ -42,9 +42,19 @@
 
   <p><strong data-i18n="gift_price_2">Prezzo:</strong> <span data-i18n="gift_price_val_2">circa 80€</span></p>
 
-  <p><a class="link_esterno" href="#" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_2" class="">
+  <section id="instructions" class="container contact">
+    <h3 data-i18n="instr_title_2"> Istruzioni </h3>
+    <p data-i18n="instr_text_2">jdbdbskbxkdb</p>
+   </section>
+   
+  <p><a class="link_esterno" href="" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_2">
   Vai al sito
   </a></p>
+   
+    <section id="contact" class="container contact">
+    <h3 data-i18n="contact_title">Contatti</h3>
+    <p data-i18n="contact_text">Per modifiche, puoi contattare  <code>me </code> o <code>me </code>.</p>
+  </section>
 
   <br>
   <a href="index.html#gallery" class="cta" data-i18n="back_to_gallery">⬅ Torna alla galleria</a>
@@ -58,5 +68,6 @@
 
 <script src="traduzioni.js"></script>
 <script src="script.js"></script>
+
 </body>
 </html>
