--- a/Regalo3.html
+++ b/Regalo3.html
@@ -18,7 +18,7 @@
       <a href="index.html#home" data-i18n="nav_home">Home</a>
       <a href="index.html#gallery" data-i18n="nav_gallery">Galleria</a>
       <a href="#contact" data-i18n="nav_contact">Contatti</a>
-      <a href="index.html#instructions" data-i18n="nav_instructions">Istruzioni</a>
+      <a href="#instructions" data-i18n="nav_instructions">Istruzioni</a>
     </nav>
   </div>
 </header>
@@ -30,7 +30,7 @@
 </div>
 
 <main  class="container gift-container">
-  <h2 class="animated-underline"  data-i18n="gift_title_3">
+  <h2 class="animated-underline" data-i18n="gift_title_3">
    🎁 Regalo #3 – Zaino TechPack
   </h2>
 
@@ -42,7 +42,19 @@
 
   <p><strong data-i18n="gift_price_3">Prezzo:</strong> <span data-i18n="gift_price_val_3">circa 60€</span></p>
 
-  <p><a class="link_esterno" href="#" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_3">Vai al sito</a></p>
+  <section id="instructions" class="container contact">
+    <h3 data-i18n="instr_title_3"> Istruzioni </h3>
+    <p data-i18n="instr_text_3"> jdbdbskbxkdb</p>
+   </section>
+   
+  <p><a class="link_esterno" href="" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_3">
+  Vai al sito
+  </a></p>
+   
+    <section id="contact" class="container contact">
+    <h3 data-i18n="contact_title">Contatti</h3>
+    <p data-i18n="contact_text">Per modifiche, puoi contattare  <code>me </code> o <code>me </code>.</p>
+  </section>
 
   <br>
   <a href="index.html#gallery" class="cta" data-i18n="back_to_gallery">⬅ Torna alla galleria</a>
