--- a/Regalo4.html
+++ b/Regalo4.html
@@ -18,7 +18,7 @@
       <a href="index.html#home" data-i18n="nav_home">Home</a>
       <a href="index.html#gallery" data-i18n="nav_gallery">Galleria</a>
       <a href="#contact" data-i18n="nav_contact">Contatti</a>
-      <a href="index.html#instructions" data-i18n="nav_instructions">Istruzioni</a>
+      <a href="#instructions" data-i18n="nav_instructions">Istruzioni</a>
     </nav>
   </div>
 </header>
@@ -45,11 +45,19 @@
     <span data-i18n="gift_price_val_4">circa 90€</span>
   </p>
 
-  <p>
-    <a class="link_esterno" href="https://amzn.eu/d/i09AXzX" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_4">
-      Vai al sito
-    </a>
-  </p>
+  <section id="instructions" class="container conctact">
+    <h3 data-i18n="instr_title4"> Istruzioni </h3>
+    <p data-i18n="instr_text4"> jdbdbskbxkdb</p>
+  </section>
+   
+  <p><a class="link_esterno" href="" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_4">
+    Vai al sito
+  </a></p>
+   
+    <section id="contact" class="container contact">
+      <h3 data-i18n="contact_title">Contatti</h3>
+      <p data-i18n="contact_text">Per modifiche, puoi contattare  <code>me </code> o <code>me </code>.</p>
+    </section>
 
   <br>
 
