--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Merry Christmas</title>
+  <title>La prova</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="images/Favicon.png">
 </head>
@@ -19,7 +19,6 @@
       <a href="#home" data-i18n="nav_home">Home</a>
       <a href="#gallery" data-i18n="nav_gallery">Galleria</a>
       <a href="#contact" data-i18n="nav_contact">Contatti</a>
-      <a href="#instructions" data-i18n="nav_instructions">Istruzioni</a>
     </nav>
   </div>
 </header>
@@ -56,7 +55,7 @@
     <div class="carousel-wrapper">
 
       <div class="slide active">
-        <img src="images/il_PC.jpg" alt="Er PC">
+        <a href="Regalo1.html"> <img src="images/il_PC.jpg" alt="Er PC"> </a>
         <span class="priority glass" data-i18n="priority_1">🎁 Regalo #1</span>
         <a href="Regalo1.html" class="caption" data-i18n="caption_1">
           🎁 PC White Shark 2.0 🎁
@@ -64,7 +63,7 @@
       </div>
 
       <div class="slide">
-        <img src="images/Regalo.png" alt="Regalo 2">
+        <a href="Regalo2.html"> <img src="images/Regalo.png" alt="Regalo 2"> </a>
         <span class="priority glass" data-i18n="priority_2">🎁 Regalo #2</span>
         <a href="Regalo2.html" class="caption" data-i18n="caption_2">
           🎁 Regalo numero 2 🎁
@@ -72,7 +71,7 @@
       </div>
 
       <div class="slide">
-        <img src="images/Regalo.png" alt="Regalo 3">
+        <a href="Regalo3.html"> <img src="images/Regalo.png" alt="Regalo 3"> </a>
         <span class="priority glass" data-i18n="priority_3">🎁 Regalo #3</span>
         <a href="Regalo3.html" class="caption" data-i18n="caption_3">
           🎁 Regalo 3 🎁
@@ -80,7 +79,7 @@
       </div>
 
       <div class="slide">
-        <img src="images/Regalo.png" alt="Regalo 4">
+       <a href="Regalo4.html"> <img src="images/Regalo.png" alt="Regalo 4"> </a>
         <span class="priority glass" data-i18n="priority_4">🎁 Regalo #4</span>
         <a href="Regalo4.html" class="caption" data-i18n="caption_4">
           🎁 Regalo 4 🎁
@@ -102,11 +101,18 @@
     </div>
 
   </section>
-
-  <section id="contact" class="container contact">
+  
+   <section id="contact" class="container contact">
+    <h3 id="instructions"> Istruzioni  <h3>
+    <p> jdbdbskbxkdb</p>
+   </section>
+   
+    <section id="contact" class="container contact">
     <h3 data-i18n="contact_title">Contatti</h3>
     <p data-i18n="contact_text">Per modifiche, puoi contattare  <code>me </code> o <code>me </code>.</p>
   </section>
+  
+
 
 </main>
 
