Il cavolo di titolo!

--- a/Regalo3.html
+++ b/Regalo3.html
@@ -6,11 +6,10 @@
   <title>Gift #3</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="images/Regalo.png">
+
 </head>
 <body>
-
 <div class="snow"></div>
-
 <header class="site-header">
   <div class="container">
     <h1 data-i18n="header_title">Mia lista per san Niccola</h1>
@@ -29,33 +28,54 @@
   <button class="glass" onclick="setLang('it')">ɪᴛᴀ</button>
 </div>
 
-<main  class="container gift-container">
+<main class="container gift-container">
   <h2 class="animated-underline" data-i18n="gift_title_3">
-   🎁 Regalo #3 – Zaino TechPack
+   🎁 Regalo #3 – Cuffie Premium
   </h2>
+  
 
-  <img src="images/Regalo.png" alt="Zaino TechPack" class="gift-image">
-
+  <div class="headphones-animation">
+    <div class="center-text">
+      CUFFIE PREMIUM
+      <small>Gaming & Audio</small>
+    </div>
+    <div class="circle">
+      <div class="headphone-wrapper">
+        <div class="headphone">
+          <img src="images/Cuffie1.png" alt="Marshall">
+        </div>
+      </div>
+      <div class="headphone-wrapper">
+        <div class="headphone">
+          <img src="images/Cuffie2.png" alt="Razer">
+        </div>
+      </div>
+      <div class="headphone-wrapper">
+        <div class="headphone">
+          <img src="images/Cuffie3.png" alt="RGB Gaming">
+        </div>
+      </div>
+    </div>
+  </div>
+  
   <p data-i18n="gift_desc_3">
-    Zaino resistente con scomparti speciali per laptop, caricatore e accessori, perfetto per la scuola e i viaggi.
+    Cuffie premium con audio di alta qualità, perfette per gaming, musica e chiamate. Disponibili in diversi modelli e stili.
   </p>
-
   <p><strong data-i18n="gift_price_3">Prezzo:</strong> <span data-i18n="gift_price_val_3">circa 60€</span></p>
-
+  
   <section id="instructions" class="container contact">
-    <h3 data-i18n="instr_title_3"> Istruzioni </h3>
-    <p data-i18n="instr_text_3"> jdbdbskbxkdb</p>
-   </section>
+    <h3 data-i18n="instr_title_3">Istruzioni</h3>
+    <p data-i18n="instr_text_3">Scegli il modello che preferisci tra quelli in rotazione sopra!</p>
+  </section>
    
   <p><a class="link_esterno" href="" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_3">
   Vai al sito
   </a></p>
    
-    <section id="contact" class="container contact">
+  <section id="contact" class="container contact">
     <h3 data-i18n="contact_title">Contatti</h3>
-    <p data-i18n="contact_text">Per modifiche, puoi contattare  <code>me </code> o <code>me </code>.</p>
+    <p data-i18n="contact_text">Per modifiche, puoi contattare <code>me</code> o <code>me</code>.</p>
   </section>
-
   <br>
   <a href="index.html#gallery" class="cta" data-i18n="back_to_gallery">⬅ Torna alla galleria</a>
 </main>
