--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>La prova</title>
+  <title> Merry Christmas </title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="images/Favicon.png">
 </head>
@@ -71,7 +71,7 @@
       </div>
 
       <div class="slide">
-        <a href="Regalo3.html"> <img src="images/Regalo.png" alt="Regalo 3"> </a>
+        <a href="Regalo3.html"> <img src="images/3_Cuffie.png" alt="Regalo 3"> </a>
         <span class="priority glass" data-i18n="priority_3">🎁 Regalo #3</span>
         <a href="Regalo3.html" class="caption" data-i18n="caption_3">
           🎁 Regalo 3 🎁
