Aggiungo il link alle imagine delle cuffie + ottimizazioni generali

--- a/Regalo1.html
+++ b/Regalo1.html
@@ -48,7 +48,7 @@
     <p data-i18n="instr_text_1"> jdbdbskbxkdb</p>
    </section>
    
-  <p><a class="link_esterno" href="https://www.golookshop.it/shop/pc-white-shark/" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_1">
+  <p><a class="external_link" href="https://www.golookshop.it/shop/pc-white-shark/" target="_blank" rel="noreferrer" data-i18n="gift_buy_1">
   Vai al sito
   </a></p>
    
