--- a/Regalo3.html
+++ b/Regalo3.html
@@ -42,17 +42,17 @@
     <div class="circle">
       <div class="headphone-wrapper">
         <div class="headphone">
-          <img src="images/Cuffie1.png" alt="Marshall">
+          <a href= "https://amzn.eu/d/9iZYc8t"> <img src="images/Cuffie1.png" alt="Marshall"> </a>
         </div>
       </div>
       <div class="headphone-wrapper">
         <div class="headphone">
-          <img src="images/Cuffie2.png" alt="Razer">
+         <a href="https://amzn.eu/d/0JxfQqn"> <img src="images/Cuffie2.png" alt="Razel"> </a>
         </div>
       </div>
       <div class="headphone-wrapper">
         <div class="headphone">
-          <img src="images/Cuffie3.png" alt="RGB Gaming">
+          <a href="https://amzn.eu/d/gOVB9VC" rel="noopener noreferrer" > <img src="images/Cuffie3.png"  alt="RGB Gaming"> </a>
         </div>
       </div>
     </div>
@@ -68,9 +68,10 @@
     <p data-i18n="instr_text_3">Scegli il modello che preferisci tra quelli in rotazione sopra!</p>
   </section>
    
-  <p><a class="link_esterno" href="" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_3">
-  Vai al sito
-  </a></p>
+  <p class="external_link" data-i18n="gift_buy_3">
+  Per trovare il sito - clicca sull'immagine della cuffia desideratta
+  </p>
+  
    
   <section id="contact" class="container contact">
     <h3 data-i18n="contact_title">Contatti</h3>
