--- a/Regalo4.html
+++ b/Regalo4.html
@@ -50,7 +50,7 @@
     <p data-i18n="instr_text4"> jdbdbskbxkdb</p>
   </section>
    
-  <p><a class="link_esterno" href="" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_4">
+  <p><a class="external_link" href="" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_4">
     Vai al sito
   </a></p>
    
