--- a/Regalo2.html
+++ b/Regalo2.html
@@ -47,7 +47,7 @@
     <p data-i18n="instr_text_2">jdbdbskbxkdb</p>
    </section>
    
-  <p><a class="link_esterno" href="" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_2">
+  <p><a class="external_link" href="" target="_blank" rel="noopener noreferrer" data-i18n="gift_buy_2">
   Vai al sito
   </a></p>
    
