Testing new extensions and coding in VS Code

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- Per telefonini piccolini -->
 <div class="lang-select-mobile">
   <select onchange="setLang(this.value)">
-    <option disabled selected>•••</option>
+    <option disabled selected>Lang?</option>
     <option value="it">Italiano 🇮🇹</option>
     <option value="en">English 🇬🇧</option>
     <option value="uk">Українська 🇺🇦</option>
